Adding new mustache

--- a/app/src/main/resources/vandavv/views/list.mustache
+++ b/app/src/main/resources/vandavv/views/list.mustache
@@ -1,10 +1,11 @@
 <html>
 <head>
     <title>List Page</title>
+    <meta charset="utf-8"/>
 </head>
 <body>
 <div id="content">
-    <h1><a href="/addRecord">Dodaj rekord</a></h1>
+    <h1><a href="/addRecord">Add record</a></h1>
     <ol>
         {{#books}}
         <li>Author: {{author}}<br/>Title: {{title}}<br/>ISBN: {{isbn}}</li>
